Fixed image stretching problem on some mobile browsers

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -257,6 +257,8 @@ body {
       }
     }
     img {
+      width: 100%;
+      object-fit: cover;
       cursor: pointer;
       opacity: 0.5;
       border-radius: 0.5rem;
